Added last popups

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <scope>runtime</scope>
             <classifier>desktop</classifier>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
     </dependencies>
 
